Added default menu for MacOS and changed application name

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "todoplus",
-  "productName": "todoplus",
+  "productName": "To-Do Plus",
   "version": "1.0.0",
   "description": "My Electron application description",
   "main": ".webpack/main",
