--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,8 +11,7 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "paths": {
-      "*": ["node_modules/*"],
-      "#": ["."]
+      "*": ["node_modules/*"]
     },
     "jsx": "react"
   },
