--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.0.2",
     "redux-first-history": "^5.0.3",
+    "semver": "^7.3.5",
     "swr": "^1.0.1"
   }
 }
