--- a/package.json
+++ b/package.json
@@ -86,6 +86,8 @@
     "typescript": "^4.0.2"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/react-fontawesome": "^0.1.16",
     "@reduxjs/toolkit": "^1.6.2",
     "electron-squirrel-startup": "^1.0.0",
     "history": "^5.1.0",
