--- a/package.json
+++ b/package.json
@@ -86,8 +86,11 @@
     "typescript": "^4.0.2"
   },
   "dependencies": {
+    "@emotion/react": "^11.7.0",
+    "@emotion/styled": "^11.6.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/react-fontawesome": "^0.1.16",
+    "@mui/material": "^5.2.2",
     "@reduxjs/toolkit": "^1.6.2",
     "electron-squirrel-startup": "^1.0.0",
     "history": "^5.1.0",
