--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "@mui/material": "^5.2.2",
     "@reduxjs/toolkit": "^1.6.2",
     "electron-squirrel-startup": "^1.0.0",
+    "fortawesome": "^0.0.1-security",
     "history": "^5.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
