--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "electron-squirrel-startup": "^1.0.0",
     "fortawesome": "^0.0.1-security",
     "history": "^5.1.0",
+    "keytar": "^7.7.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
