--- a/package.json
+++ b/package.json
@@ -91,6 +91,8 @@
     "@emotion/styled": "^11.6.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/react-fontawesome": "^0.1.16",
+    "@material-ui/core": "^5.0.0-beta.5",
+    "@material/tooltip": "^13.0.0",
     "@mui/material": "^5.2.2",
     "@reduxjs/toolkit": "^1.6.2",
     "electron-squirrel-startup": "^1.0.0",
